<resources>
    <string name="app_name">Fitness Ensure</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>

    <!--    facebook-->
    <string name="facebook_app_id">2651249698529496</string>
    <string name="fb_login_protocol_scheme">fb2651249698529496</string>


    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="banner">Banner</string>
    <string name="good_morning">Good Morning,</string>
    <string name="user_name">User Name</string>
    <string name="height">Height</string>
    <string name="feedback">FeedBack</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="_20"><![CDATA[20<]]></string>
    <string name="_8"><![CDATA[8%<]]></string>
    <string name="_8_21"><![CDATA[8-21%<]]></string>
    <string name="_21_26">21-26%</string>
    <string name="_26"><![CDATA[<26%]]></string>
    <string name="early_morning">Early Morning (6:30 - 7.30)</string>
    <string name="breakfast">Breakfast (8:30 - 9:30)</string>
    <string name="brunch">Brunch (11:00 - 12:00)</string>
    <string name="lunch">Lunch (1:30 - 2:30)</string>
    <string name="snack">Snack (4:30 - 5:30)</string>
    <string name="dinner">Dinner (8:30 - 9:30)</string>
    <string name="bed_time">Bed Time (11:00)</string>

    <!--    Gender Array-->
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!--    Height Array-->
    <string-array name="height">
        <item>Imperial(ft,in)</item>
        <item>Metric(cm)</item>
    </string-array>

    <!--    Weight Array-->
    <string-array name="weight">
        <item>kg</item>
        <item>lbs</item>
    </string-array>

    <!--    Waist Array-->
    <string-array name="waist">
        <item>in</item>
        <item>cm</item>
    </string-array>

    <!--    Gender Array-->
    <string-array name="gender1">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--    Physical Activity Levels-->
    <string-array name="pal">
        <item>Extremely Inactive</item>
        <item>Sedentary with No Exercise</item>
        <item>Sedentary with Little Exercise</item>
        <item>Moderately Active</item>
        <item>Vigorously Active	</item>
        <item>Extremely Active</item>
    </string-array>

</resources>