<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_us"
            android:title="@string/menu_about" />

    </group>

    <item android:title= "COMMUNICATION" >
        <menu>
            <item
                android:id= "@+id/nav_share"
                android:icon= "@drawable/ic_share"
                android:title= "@string/menu_share" />
            <item
                android:id= "@+id/nav_feedback"
                android:icon= "@drawable/ic_feedback"
                android:title= "@string/menu_feedback" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>