<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Activities.Diet">

    <Spinner
        android:id="@+id/spDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text"
        android:padding="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/spDays">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblEarlyMorning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/montserrat_bold"
                android:text="@string/early_morning"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEarlyMorning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblEarlyMorning"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtEarlyMorning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="METHIDANA (5g) \nWITH LUKEWARM (150ml) \nWATER + APPLE"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/lblBreakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cvEarlyMorning"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/breakfast"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cbBreakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblBreakfast"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtBreakfast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="2 BOILED\nEGGWHITE +TONED MILK (200ml)"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/lblBrunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbBreakfast"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/brunch"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cbBrunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblBrunch"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtBrunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="DIET NAMKEEN (1bowl)\nGREEN TEA (1 cup) + FRUIT"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/lblLunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbBrunch"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/lunch"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cbLunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblLunch"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtLunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="SEASONAL CURRY (1 bowl)\nCHAPATI (2)\nBOILED RICE(1bowl)\nBOONDI RAITA (1 bowl)+ SALAD (1 plate)
"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/lblSnack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbLunch"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/snack"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cbSnack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblSnack"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtSnack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="BHELPOORI (1 katori)\nLASSI"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/lblDinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbSnack"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/dinner"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cbDinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblDinner"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtDinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="VEG BIRYANI (LESS OIL)(1 plate)\nCURD (1bowl)\nSALAD (1 plate)\nSUGAR-FREE PUDDING(1 bowl)"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/lblBedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbDinner"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/bed_time"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cbBedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblBedTime">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txtBedTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="TONED MILK (150 ml)\nHIGH FIBRE BISCUITS(2)"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>